--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -23,6 +23,7 @@
 html,
 body {
     height: 100%;
+    width: 100%;
 }
 
 body {
@@ -32,7 +33,43 @@ body {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    text-align: center;
+    width: 100%;
+}
+
+.text-uppercase { text-transform: uppercase; }
+.text-striked { text-decoration: line-through; }
+.text-center { text-align: center; }
+
+main {
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.product-card {
+    max-width: 280px;
+    height: auto;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.product-card--image {
+    height: 180px;
+}
+
+.product-card--image > div {
+    background-image: url("./images/image-product-mobile.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.product-card--details {
+    background-color: var(--white);
+    padding: 20px;
 }
