--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -26,10 +26,18 @@ body {
     width: 100%;
 }
 
+h1,h2,h3 {
+    font-weight: var(--fw-bold);
+    color: black;
+    margin-bottom: 10px;
+}
+
 body {
     font-size: var(--fs-default);
     background-color: var(--cream);
     position: relative;
+    font-weight: var(--fw-regular);
+    color: var(--darkGrayishBlue);
 }
 
 footer {
@@ -41,6 +49,7 @@ footer {
 .text-uppercase { text-transform: uppercase; }
 .text-striked { text-decoration: line-through; }
 .text-center { text-align: center; }
+.font-bold { font-weight: var(--fw-bold); }
 
 main {
     padding: 20px;
@@ -54,6 +63,31 @@ main {
     height: auto;
     border-radius: 10px;
     overflow: hidden;
+}
+
+.product-card button {
+    background-color: var(--darkCyan);
+    width: 100%;
+    color: var(--white);
+    border: none;
+    outline: none;
+    padding: 14px 20px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.product-card button > span {
+    width: 14px;
+    height: 14px;
+    display: inline-block;
+}
+
+.product-card button > span img {
+    height: 100%;
+    width: 100%;
 }
 
 .product-card--image {
@@ -72,4 +106,26 @@ main {
 .product-card--details {
     background-color: var(--white);
     padding: 20px;
+    margin-bottom: 8px;
+}
+
+.product-card--details-type {
+    letter-spacing: 4px;
+}
+
+.product-card--details-caption {
+    line-height: 20px;
+    margin-bottom: 15px;
+}
+
+.product-card--details-price {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 15px;
+}
+
+.product-card--details-price h2 {
+    color: var(--darkCyan);
+    margin-bottom: 0;
 }
