--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -31,7 +31,7 @@ body {
 h1,h2,h3 {
     font-weight: var(--fw-bold);
     color: black;
-    margin-bottom: 10px;
+    margin-bottom: 0.625em;
 }
 
 body {
@@ -54,16 +54,16 @@ footer {
 .font-bold { font-weight: var(--fw-bold); }
 
 main {
-    padding: 20px;
+    padding: 1.25em;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .product-card {
-    max-width: 280px;
+    max-width: 17.5em;
     height: auto;
-    border-radius: 10px;
+    border-radius: 0.625em;
     overflow: hidden;
 }
 
@@ -73,12 +73,12 @@ main {
     color: var(--white);
     border: none;
     outline: none;
-    padding: 14px 20px;
-    border-radius: 5px;
+    padding: 0.875em 1.25em;
+    border-radius: 0.3125em;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 0.625em;
 }
 
 .product-card button:hover {
@@ -87,8 +87,8 @@ main {
 }
 
 .product-card button > span {
-    width: 14px;
-    height: 14px;
+    width: 0.875em;
+    height: 0.875em;
     display: inline-block;
 }
 
@@ -98,7 +98,7 @@ main {
 }
 
 .product-card--image {
-    height: 180px;
+    height: 11.25em;
 }
 
 .product-card--image > div {
@@ -112,32 +112,32 @@ main {
 
 .product-card--details {
     background-color: var(--white);
-    padding: 20px;
+    padding: 1.25em;
 }
 
 .product-card--details h2 {
     font-family: var(--ff-primary);
-    font-size: 26px;
+    font-size: 1.625em;
     font-weight: 700;
 }
 
 .product-card--details-type {
-    letter-spacing: 4px;
-    font-size: 12px;
-    margin-bottom: 10px;
+    letter-spacing: 0.25em;
+    font-size: 0.75em;
+    margin-bottom: 0.625em;
 }
 
 .product-card--details-caption {
-    line-height: 20px;
-    margin-bottom: 15px;
-    font-size: 12px;
+    line-height: 1.25em;
+    margin-bottom: 1em;
+    font-size: 0.75em;
 }
 
 .product-card--details-price {
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin-bottom: 15px;
+    gap: 0.625em;
+    margin-bottom: 1em;
 }
 
 .product-card--details-price h2 {
@@ -147,14 +147,14 @@ main {
 
 .product-card--details-price p {
     color:var(--darkGrayishBlue);
-    font-size: 12px;
+    font-size: 0.75em;
 }
 
 @media screen and (min-width: 40em) {
     .product-card {
-        max-width: 500px;
+        max-width: 31.25em;
         display: flex;
-        border-radius: 10px;
+        border-radius: 0.625em;
     }
 
     .product-card > * {
@@ -173,6 +173,6 @@ main {
     
     .product-card--details {
         margin-bottom: 0;
-        padding: 30px;
+        padding: 1.875em;
     }
 }
