--- a/interactive-rating-component-main/styles.css
+++ b/interactive-rating-component-main/styles.css
@@ -1,10 +1,17 @@
 :root {
+    /* colors */
     --orange: hsl(25, 97%, 53%);
     --white: hsl(0, 0%, 100%);
     --lightGrey: hsl(217, 12%, 63%);
     --mediumGrey: hsl(217, 15%, 27%);
     --darkBlue: hsl(213, 19%, 18%);
     --veryDarkBlue: hsl(216, 12%, 8%);
+
+    /* typography */
+    --ff: 'Overpass', sans-serif;
+    --fw-regular: 400;
+    --ff-bold: 700;
+    --fs-default: 0.938rem;
 }
 
 * {
@@ -12,6 +19,7 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    font-family: var(--ff);
 }
 
 html,
@@ -22,7 +30,15 @@ body {
 
 body {
     background-color: var(--veryDarkBlue);
+    color: var(--lightGrey);
+    font-size: var(--fs-default);
+}
+
+h1,
+h2,
+h3 {
     color: var(--white);
+    font-weight: var(--fw-bold);
 }
 
 footer {
@@ -41,6 +57,33 @@ main {
 }
 
 .text-uppercase { text-transform: uppercase; }
+
+#Review {
+    position: relative;
+}
+
+#Review-Modal {
+    transform: perspective(1000px);
+    transition: 1s;
+    backface-visibility: hidden;
+}
+
+#Review:hover #Review-Modal {
+    transform: perspective(1000px) rotateY(180deg);
+}
+
+#Review-Result {
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+    transform: perspective(1000px) rotateY(-180deg);
+    transition: 1s;
+}
+
+#Review:hover #Review-Result {
+    transform: perspective(1000px) rotateY(0deg);
+}
 
 #Review-Modal,
 #Review-Result {
@@ -116,7 +159,7 @@ main {
 }
 
 #Review-Result {
-    
+    transform: rotateY(-180deg);
 }
 
 #Review-Result--icon,
