--- a/stats-preview-card-component-main/styles.css
+++ b/stats-preview-card-component-main/styles.css
@@ -30,11 +30,10 @@ body {
     font-size: var(--fs-default);
     color: var(--slightlyTransparentWhite);
     font-family: var(--ff-primary);
-    /* font-weight: var(--fw-regular); */
 }
 
 main {
-    padding: 20px;
+    padding: 1.25em;
 }
 
 footer {
@@ -87,21 +86,21 @@ h3 {
 }
 
 #Stats-Preview--text-content {
-    padding: 30px;
+    padding: 1.875em;
     text-align: center;
 }
 
 #Stats-Preview--text-content > h2 {
-    margin-bottom: 20px;
+    margin-bottom: 1.25em;
 }
 
 #Stats-Preview--text-content > p {
-    margin-bottom: 30px;
-    line-height: 24px;
+    margin-bottom: 1.875em;
+    line-height: 1.5em;
 }
 
 #Stats-Preview--text-content--numbers > div {
-    margin-bottom: 20px;
+    margin-bottom: 1.25em;
 }
 
 #Stats-Preview--text-content--numbers > div:last-child {
@@ -109,11 +108,11 @@ h3 {
 }
 
 #Stats-Preview--text-content--numbers h3 {
-    margin-bottom: 10px;
+    margin-bottom: 0.625em;
 }
 
 #Stats-Preview--text-content--numbers p {
-    font-size: 13px;
+    font-size: 0.813em;
     letter-spacing: 1px;
 }
 
@@ -148,16 +147,16 @@ h3 {
 
     #Stats-Preview--text-content {
         text-align: start;
-        padding: 50px;
+        padding: 3.125em;
     }
 
     
     #Stats-Preview--text-content > h2 {
-        font-size: 28px;
-        line-height: 34px;
+        font-size: 1.75em;
+        line-height: 2.125em;
     }
 
     #Stats-Preview--text-content > p {
-        margin-bottom: 30px;
+        margin-bottom: 1.875em;
     }
 }
